# learn-ogl

./: learn_ogl.cpp  meson.build
.cache/clangd/index/: glad.c.FC1000F3D4FCD8E5.idx  glad.h.AAA7AE4FDEFA32CB.idx  khrplatform.h.E8CE74CAC3267396.idx  learn_ogl.cpp.B0F40396239BB6C2.idx
include/glad/: glad.h
src/: glad.c
